troubleshoot contrast issues

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -60,7 +60,7 @@ li {
 
 h2 {
   font-size: 40px;
-  color: cadetblue;
+  color: #2F4B4B;
 }
 
 footer p {
